[tool.poetry]
name = "execbg"
version = "0.1.0"
description = "execute command in backround"
authors = ["Yuuya Watabe <watabe951@gmail.com>"]
license = "MIT"

[tool.poetry.scripts]
execbg = "execbg.__main__:main"

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
